# YATSEE

./: README.md  pyproject.toml  yatsee.conf
docs/: transcription-defaults.md  yatsee_config_guide.md  yatsee_overview.md  yatsee_prompt_orchestration.md  yatsee_troubleshooting.md  yatsee_user_guide.md
examples/: yatsee_search_demo.py
prompts/civic/: prompts.toml
prompts/research/: prompts.toml
scripts/: qa_reset_vtt_for_rebuild.py  qa_transcript_report.py  repair_suppressed_vtt_from_log.py  setup.ps1  setup.sh
src/yatsee/: __main__.py
src/yatsee/audio/: ffmpeg.py  format.py  transcribe.py
src/yatsee/cli/: audio.py  config.py  intel.py  main.py  transcript.py
src/yatsee/config_tools/: entity.py  resolve.py  scaffold.py  validate.py
src/yatsee/core/: config.py  discovery.py  errors.py  io.py  paths.py  runtime.py  source_ids.py
src/yatsee/intel/: classifier.py  llm.py  prompts.py  resolve.py  runner.py  signals.py  summary.py
src/yatsee/providers/: __init__.py  base.py  security.py
src/yatsee/source/: youtube.py
src/yatsee/transcript/: normalize.py  slice.py
tests/: test_smoke.py
