[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yatsee"
version = "0.1.0"
description = "Yet Another Tool for Speech Extraction & Enrichment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "YATSEE Labs" }
]
dependencies = [
  "toml~=0.10.2",
  "tomlkit~=0.11.8",
]

[project.optional-dependencies]
whisper = [
  "openai-whisper==20250625",

  # Temporary known-good cap for the current CUDA/PyTorch environment.
  # Revisit after Fedora/NVIDIA/CUDA cleanup.
  "torch<=2.7.1",
  "torchaudio<=2.7.1",

  "tqdm<=4.67.1",
]

faster = [
  "faster-whisper==1.2.1",
]

transcript = [
  "webvtt-py~=0.5.1",
  "spacy>=3.8.14",
  "click>=8.4,<9",
  "sentence-transformers~=4.1.0",
]

intelligence = [
  "PyYAML~=6.0.2",
  "requests~=2.32.4",
  "mdformat~=1.0.0",
]

pipeline = [
  "openai-whisper==20250625",

  # Temporary known-good cap for the current CUDA/PyTorch environment.
  # Revisit after Fedora/NVIDIA/CUDA cleanup.
  "torch<=2.7.1",
  "torchaudio<=2.7.1",

  "tqdm<=4.67.1",
  "faster-whisper==1.2.1",
  "webvtt-py~=0.5.1",
  "spacy>=3.8.14",
  "click>=8.4,<9",
  "sentence-transformers~=4.1.0",
  "PyYAML~=6.0.2",
  "requests~=2.32.4",
  "mdformat~=1.0.0",
]

index = [
  "chromadb>=1.5.7",
  "numpy",
  "scikit-learn>=1.8,<2",
]

search = [
  "chromadb>=1.5.7",
  "sentence-transformers~=4.1.0",
  "streamlit>=1.56.0",
]

research = [
  "chromadb>=1.5.7",
  "numpy",
  "sentence-transformers~=4.1.0",
  "scikit-learn>=1.8,<2",
  "streamlit>=1.56.0",
]

# Compatibility alias for older docs/scripts that used `.[ui]`.
ui = [
  "chromadb>=1.5.7",
  "sentence-transformers~=4.1.0",
  "streamlit>=1.56.0",
]

llamacpp = [
  "llama-cpp-python[server]",
]

full = [
  "openai-whisper==20250625",

  # Temporary known-good cap for the current CUDA/PyTorch environment.
  # Revisit after Fedora/NVIDIA/CUDA cleanup.
  "torch<=2.7.1",
  "torchaudio<=2.7.1",

  "tqdm<=4.67.1",
  "faster-whisper==1.2.1",
  "webvtt-py~=0.5.1",
  "click>=8.4,<9",
  "spacy>=3.8.14",
  "sentence-transformers~=4.1.0",
  "PyYAML~=6.0.2",
  "requests~=2.32.4",
  "mdformat~=1.0.0",

  "chromadb>=1.5.7",
  "numpy",
  "scikit-learn>=1.8,<2",
  "streamlit>=1.56.0",
]

[project.scripts]
yatsee = "yatsee.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]